@@ -1,3 +1,8 @@
+2006-11-17  Mathieu Blondel  <mblondel@cvs.gnome.org>
+
+    * POTFILES.in: Updated with new translatable files.
+    * fr.po: Updated french translation.
+
 2006-03-12  Raphael Higino  <raphaelh@cvs.gnome.org>
 
 	* pt_BR.po: Added Brazilian Portuguese translation.
